[package]
name = "mskey"
version = "0.1.0"
edition = "2021"

[dependencies]
umskt = { path = "../umskt" }
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
log = "0.4.19"
simple_logger = { version = "4.2.0", default-features = false }

