[package]
name = "mskey"
version = "0.1.0"
edition = "2021"

[dependencies]
umskt = { path = "../umskt" }
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
log = "0.4.19"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
simple_logger = { version = "4.2.0", default-features = false }

