[package]
name = "umskt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bitreader = "0.3.7"
elliptic-curve = "0.13.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
sha1 = "0.10.5"
thiserror = "1.0.40"

[dev-dependencies]
serde_json = "1.0"
